# CMakeCraft

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
cmake/: toolchain-clang-x86_64.cmake  toolchain-gcc-x86_64.cmake
docs/: README.md  boost.md  googletest.md  json.md
ext/: json.md
source/: CMakeLists.txt
source/greet/: CMakeLists.txt  greet.cpp
test/: CMakeLists.txt
